syntax = "proto3";

package stream;

// protoc -I stream/ stream/stream.proto --go_out=plugins=grpc:stream


//=========================SCALES scaner
service ApiCallerScale {
  rpc ScalesMessageOutChannel(stream RequestScale) returns (stream ResponseScale) {}
  rpc SetTare(Empty) returns (ResponseSetScale) {}
  rpc SetTareValue(RequestTareValue) returns (ResponseSetScale) {}
  rpc SetZero(Empty) returns (ResponseSetScale) {}
  rpc GetInstantWeight(Empty) returns (ResponseInstantWeight) {}
  rpc GetState(Empty) returns (ResponseScale) {}
}

message Empty {
}
// The response message
message ResponseScale {
  string error = 1;
  string message = 2;
  string type = 3;
  string subtype = 4;
}

message RequestTareValue {
  string message = 1;
}

message RequestScale {
  string message = 1;
  string type = 2;
  string subtype = 3;
}

message ResponseSetScale {
  string error = 1;
}

message ResponseInstantWeight {
  string error = 1;
  string message = 2;
}